# Raylib

./: .clang-format  .clangd  .editorconfig  .gitignore  CMakeLists.txt  build.ps1  commands.md  compile_commands.json
raylib/: Game Design Document.md
raylib/.obsidian/: app.json  appearance.json  command-palette.json  community-plugins.json  core-plugins-migration.json  hotkeys.json  workspace.json
raylib/.obsidian/plugins/obsidian-excalidraw-plugin/: data.json
raylib/.obsidian/plugins/obsidian-minimal-settings/: data.json
src/: .editorconfig  game.cpp  game.hpp  main-release.cpp  main.cpp  platform.cpp  platform.hpp  sprites.hpp  sprites.hpp.pch  tower.cpp  tower.hpp
